video-info-grid 1fr

--- a/styles/video.css
+++ b/styles/video.css
@@ -33,7 +33,7 @@
   
   .video-info-grid {
     display: grid;
-    grid-template-columns: 50px 1fr;
+    grid-template-columns: 1fr;
   }
   
   .profile-picture {
