--- a/styles/general.css
+++ b/styles/general.css
@@ -1,13 +1,17 @@
 body {
-    font-family: Roboto, Arial;
-    margin: 0;
-    padding-top: 80px;
-    padding-left: 96px;
-    padding-right: 24px;
-    background-color: rgb(248, 248, 248);
-  }
-  
-  p {
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
+  font-family: Roboto, Arial;
+  margin: 0;
+  padding-top: 80px;
+  padding-left: 96px;
+  padding-right: 24px;
+  background-color: rgb(248, 248, 248);
+}
+
+p {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+a {
+  text-decoration: none;
+}
