added color for site name

--- a/styles/header.css
+++ b/styles/header.css
@@ -19,3 +19,9 @@
     display: flex;
     align-items: center;
   }
+
+  .site-name {
+    font-size: 18px;
+    color: rgb(0, 0, 0);
+    margin-left: 15px;
+  }
