--- a/styles/header.css
+++ b/styles/header.css
@@ -25,3 +25,9 @@
     color: rgb(0, 0, 0);
     margin-left: 15px;
   }
+
+  .phone-number {
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+  }
