--- a/styles/header.css
+++ b/styles/header.css
@@ -26,6 +26,15 @@
     margin-left: 15px;
   }
 
+  .right-section {
+    width: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 20px;
+    flex-shrink: 0;
+  }
+  
   .phone-number {
     font-size: 20px;
     color: rgb(0, 0, 0);
