--- a/styles/header.css
+++ b/styles/header.css
@@ -21,7 +21,8 @@
   }
 
   .site-name {
-    font-size: 18px;
+    font-size: 20px;
+    font-weight: bold;
     color: rgb(0, 0, 0);
     margin-left: 15px;
   }
