--- a/styles/header.css
+++ b/styles/header.css
@@ -21,19 +21,17 @@
   }
 
   .site-name {
-    font-size: 20px;
+    font-size: 26px;
     font-weight: bold;
+    font-style: italic;
     color: rgb(0, 0, 0);
     margin-left: 15px;
   }
 
   .right-section {
-    width: 180px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     margin-right: 20px;
-    flex-shrink: 0;
   }
   
   .phone-number {
